*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.12 ===
* Updated the implementation of io::StdioFile::size() method for Windows.
* Fixed ipc::Library::get_module_file function for Windows.
* Added test build for Windows using MSYS2.

=== 1.0.11 ===
* Added io::InMemoryStream::size() method for obtaining the size of the wrapped buffer.
* Additional expr::Expression::parse() method that takes UTF-8 strings at input.
* Added expr::EnvResolver variable resolver that reads environment variables.
* Added io::Path::get_noext() and io::Path::get_last_noext().

=== 1.0.10 ===
* Fixed bug in io::Path::as_relative() call.
* Fixed bug in lspc::AudioWriter::write_frames() method.
* Added lspc::IAudioFormatSelector interface class for selecting audio format
  when writing to LSPC file.
* Added several utility functions for easier work with LSPC file format.
* Fixed bug related to reading audio files with 24-bit audio format under Windows.
* Added empty key support in the i18n dictionary configuration file.
* Updated build scripts.

=== 1.0.9 ===
* Updated build scripts.

=== 1.0.8 ===
* Fixed improper export definitions (typo in macro).

=== 1.0.7 ===
* Added system::get_time_millis() function.
* Got rid of the <windows.h> plague header in header files.
* Fixed integer overflow in system::time_t data structure for 32-bit systems
  by extending the size of seconds field up to 64 bit.
* Added system::get_volume_info() and system:: free_volume_info() functions
  for obtaining list of mounted volumes in the system.
* Added URL-decoding of the name of the link for QT5 bookmarks.
* Fixed improper size tracking in io::OutMemoryStream::writeb() method.
* Fixed several bugs in LSPString class implementation.
* Added support of reading *.lnk files as bookmarks.
* Fixed memory leakage in lsp::obj::PullParser::wrap() method.