@@ -6,6 +6,8 @@
 * Updated the implementation of io::StdioFile::size() method for Windows.
 * Fixed ipc::Library::get_module_file function for Windows.
 * Added test build for Windows using MSYS2.
+* Added lsp::to_lower and lsp::to_upper character conversion routines
+  (system locale independent support of Latin and Cyrillic characters).
 
 === 1.0.11 ===
 * Added io::InMemoryStream::size() method for obtaining the size of the wrapped buffer.
